<resources>
    <string name="app_name">MovieApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="devices_hint">Watch on any device</string>
    <string name="devices_message">Stream on your phone, tablet, laptop and TV without paying more</string>
    <string name="contract_title">No pesky contract</string>
    <string name="contract_message">Join today, cancel anytime</string>
    <string name="movies_message">Stream and download as much as you want, no extra fees</string>
    <string name="movies_title">Unlimited entertainment, one low price</string>
    <string name="updating_payment_method">Updating payment method</string>
    <string name="help_center">Help center</string>
    <string name="request_atitle">Request a title</string>
    <string name="update_password">Update password</string>
    <string name="cancel_account">Cancel account</string>
    <string name="fix_connection_issue">Fix connection issue</string>
    <string name="privacy">Privacy</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="contact_n_movies_customer_service">Contact \n Movies Customer Service</string>
    <string name="find_help_online">Find Help Online</string>
    <string name="we_well_connect_the_connect_for_free">We\'ll connect the call for free using your internet connection</string>
    <string name="chat">Chat</string>
    <string name="call">Call</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="need_help">Need Help?</string>
    <string name="sign_in_is_protected_by_google_recaptcha_to_ensure_n_you_re_not_a_bot_learn_more">Sign in is protected by google reCAPTCHA to ensure \n you\'re not a bot. Learn more</string>
    <string name="new_to_moviesshow_sign_up_now">New to MoviesShow? Sign up now</string>
    <string name="step_1_of_3">Step 1 of 3</string>
    <string name="choose_your_plan">Choose your plan</string>
    <string name="no_commitments_cancel_anytime">No commitments, cancel anytime.</string>
    <string name="everything_for_one_low_price">Everything for one low price</string>
    <string name="unlimited_viewing_on_all_your_devices">Unlimited viewing on all your devices</string>
    <string name="downgrade_or_upgrade_at_any_time">Downgrade or upgrade at any time.</string>
    <string name="hd_and_ultra_hd_availability_subjevt_to_your_internet_service_and_device_capabilities_not_all_content_available_in_hd_or_ultra_hd_see_terms_of_use_for_more_details">HD and Ultra HD availability subjevt to your internet service and device capabilities. Not all content available in HD or Ultra HD. See Terms of use for more details</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="authentication_success">Authentication Success</string>
    <string name="all_fields_are_required">All fields are required!</string>
    <string name="you_re_getting_an_upgrade">CONGRATULATION \n You\'re Getting An Upgrade</string>
    <string name="ok_thanks">Ok Thanks</string>
    <string name="step_2_of_3">Step 2 of 3</string>
    <string name="sign_up_to_start_your_membership">Sign up to start your membership</string>
    <string name="get_special_offers">Get special offers</string>
    <string name="continue_">Continue</string>
    <string name="setup_your_payment">Setup your payment</string>
    <string name="no_commitments_cancel_online_at_anytime">No commitments. Cancel online at anytime.</string>
    <string name="paypal">Paypal</string>
    <string name="your_membership_start_as_soon_as_you_set_up_payment">Your membership start as soon as you set up payment.</string>
    <string name="select">Select</string>
    <string name="error_in_the_service">Error in the service!</string>
    <string name="required">Required!</string>
    <string name="step_3_of_3">Step 3 of 3</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="card_number">Card Number</string>
    <string name="expiration_date_mm_yy">Expiration Date (MM/YY)</string>
    <string name="security_code_cvv">Security Code (CVV)</string>
    <string name="agreement">By checking the checkbox below you agree to our Terms of use, Privacy Statement, and and that you are over 18, MOVIE SHOW will automatically continue your membership and charge the monthly membership fee to your payment method until you cancel. You may cancel at any time to avoid future charges.</string>
    <string name="start_membership">Start Membership</string>
    <string name="credit_or_debit_card">Credit or Debit card</string>
    <string name="setup_your_paypal">Setup your Paypal</string>
    <string name="finish_signup">To finish signup, click Continue To Paypal button and login to Paypal using your email and password</string>
    <string name="continue_to_paypal">Continue To Paypal</string>
    <string name="change">Change</string>
    <string name="you_already_registered">You already registered!</string>
    <string name="registered_successfully">You\'re registered successfully</string>
    <string name="register_failed">Register failed</string>
    <string name="movie_show">Movie Show</string>
</resources>