<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="clickHandler"
            type="com.movieapp.movieapp.HelpPage.HelpPageClickHandler" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".HelpPage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{clickHandler::onBackClick}"
                android:background="@drawable/ic_arrow"
                android:backgroundTint="@color/gray"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/find_help_online"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="5dp"
            android:textSize="18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="5dp"
            android:background="@color/light_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_center"
            android:textColor="@color/blue"
            android:padding="5dp"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/ic_help"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="5dp"
            android:background="@color/light_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/updating_payment_method"
            android:textColor="@color/blue"
            android:padding="5dp"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/ic_payment"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="5dp"
            android:background="@color/light_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_atitle"
            android:textColor="@color/blue"
            android:padding="5dp"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/ic_request_title"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="5dp"
            android:background="@color/light_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_password"
            android:textColor="@color/blue"
            android:padding="5dp"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/ic_lock"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="5dp"
            android:background="@color/light_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_account"
            android:textColor="@color/blue"
            android:padding="5dp"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/ic_cancel"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="5dp"
            android:background="@color/light_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fix_connection_issue"
            android:textColor="@color/blue"
            android:padding="5dp"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/ic_fix"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="5dp"
            android:background="@color/light_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            android:textColor="@color/blue"
            android:padding="5dp"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/ic_security"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="5dp"
            android:background="@color/light_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_use"
            android:textColor="@color/blue"
            android:padding="5dp"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/ic_assignment"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="5dp"
            android:background="@color/light_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/contact_n_movies_customer_service"
            android:textColor="@color/black"
            android:padding="5dp"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/we_well_connect_the_connect_for_free"
            android:textColor="@color/black"
            android:padding="5dp"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/black_corner"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/chat"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:paddingVertical="10dp"
            android:paddingHorizontal="25dp"
            android:drawableStart="@drawable/ic_chat"
            android:drawablePadding="10dp"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/black_corner"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/call"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:paddingVertical="10dp"
            android:paddingHorizontal="25dp"
            android:drawableStart="@drawable/ic_call"
            android:drawablePadding="10dp"
            android:textSize="15sp"/>

    </LinearLayout>

</layout>
