<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="userModel"
            type="com.movieapp.movieapp.models.UsersModel" />
        <variable
            name="clickHandler"
            type="com.movieapp.movieapp.LoginActivity.LoginClickHandler" />
    </data>

    <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/gray"
        tools:context=".LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{clickHandler::onBackClick}"
                android:backgroundTint="@color/white"
                android:background="@drawable/ic_arrow"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <EditText
            android:text="@={userModel.username}"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_weight=".5"
            android:background="@drawable/shadow_frame"
            android:hint="@string/username"
            android:paddingStart="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15sp" />

        <EditText
            android:text="@={userModel.password}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:layout_weight=".5"
            android:background="@drawable/shadow_frame"
            android:hint="@string/password"
            android:paddingStart="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15sp" />

        <Button
            android:onClick="@{clickHandler::onLoginClick}"
            android:background="@color/yellow"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:layout_weight=".3"
            android:layout_gravity="center_horizontal"
            android:text="@string/login"
            android:textAllCaps="false"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".3"
            android:paddingVertical="10dp"
            android:gravity="center"
            android:text="@string/need_help"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".4"
            android:paddingVertical="10dp"
            android:gravity="center"
            android:text="@string/new_to_moviesshow_sign_up_now"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:paddingVertical="10dp"
            android:gravity="center"
            android:text="@string/sign_in_is_protected_by_google_recaptcha_to_ensure_n_you_re_not_a_bot_learn_more"
            android:textColor="@color/light_blue"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />
    </LinearLayout>
</layout>
